# bay-area-startup-survival-engine

./: Makefile  README.md  pyproject.toml  requirements.txt  startup-data-governance-and-source-map.md
analysis/: README.md  bay-area-business-applications-structural-patterns.md  bay-area-county-concentration-and-scaling-patterns.md  bay-area-county-resilience-scorecard-and-monitoring-system.md  bay-area-county-turning-point-and-regime-shift-diagnostics.md  bay-area-employer-formation-bridge-model.md  bay-area-near-term-startup-scenario-framework.md  bay-area-real-time-nowcast-backtesting-framework.md  bay-area-startup-formation-cycle-2005-2024.md  bay-area-startup-hazard-proxy-system.md  startup-survival-nowcasting-empirical-design.md
data/: README.md
docs/: README.md  bay-area-geographic-scope-and-fips-governance.md  feature-engineering-and-alert-threshold-standard.md  identification-robustness-and-sensitivity-standard.md  model-governance-and-inference-boundaries.md  nonpublic-data-handling-and-attribution-protocol.md  out-of-time-validation-and-backtesting-standard.md  public-release-and-source-attribution-standard.md  repository-integration-and-validation-note.md  repository-map.md  reproducibility-protocol-and-citation-standard.md  startup-data-dictionary-and-measurement-boundaries.md  startup-data-governance-and-source-map.md  uncertainty-decomposition-and-confidence-band-standard.md
outputs/: README.md
src/: README.md  __init__.py  assemble_bay_area_employer_proxy_panel.py  backtest_bay_area_application_nowcasts.py  build_bay_area_foundation_panel.py  (+11 more)
(+4 files in other folders)
