[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bay-area-startup-survival-engine"
version = "1.0.0"
description = "Public-data research infrastructure for Bay Area startup formation, employer-conversion proxies, and operating-context diagnostics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "openpyxl>=3.1",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
